src/components/dropMenu/dropMenu.sass
// Custom css 
.btnDropDown
    .dropMenu
        position: absolute
        padding: var(--spacing-2)

    .dropMenu__item
        height: 42px

    .btnDropdown__menu--avg
        top: 42px
        width: 100%

    .btnDropdown__menu--small
        top: 32px
        width: 100%

    .dropMenu__item__icon
        margin-right: 2px

.navbar
    .dropMenu
        position: absolute
        top: 56px
        right: -120px
        width: 280px
        transform: translateX(-45%)

//=====================
.dropMenu
    background-color: var(--compSurface-light)
    border: var(--border-2)
    border-radius: var(--border-rad-comp)
    padding: var(--spacing-3)

.dropMenu__item
    display: flex
    align-items: center
    border-radius: var(--border-rad-comp)
    padding: var(--spacing-2)

.dropMenu__item--avg
    height: 48px

.dropMenu__item--small
    height: 36px

.dropMenu__item__text
    color: var(--black-light)

.dropMenu__item__icon
    width: var(--spacing-5)
    height: var(--spacing-5)
    margin-right: var(--spacing-3)
    display: flex
    justify-content: center
    align-items: center
    border-radius: var(--border-rad-comp)
    background-color: var(--iconSurface-light)

